--- a/Taijitan/nbproject/project.properties
+++ b/Taijitan/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -34,12 +35,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jfoenix-9.0.8.jar=C:\\Users\\Jarne\\Downloads\\jfoenix-9.0.8.jar
+file.reference.jfoenix-9.0.8.jar-1=C:\\Users\\tijsm\\Downloads\\jfoenix-9.0.8.jar
+file.reference.sqljdbc42.jar=D:\\programs\\SQLServerDriver\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jfoenix-9.0.8.jar}
+    ${file.reference.jfoenix-9.0.8.jar}:\
+    ${file.reference.jfoenix-9.0.8.jar-1}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -47,7 +53,8 @@ javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=10
 javac.target=10
 javac.test.classpath=\
