--- a/Taijitan/nbproject/project.properties
+++ b/Taijitan/nbproject/project.properties
@@ -34,7 +34,7 @@ dist.jar=${dist.dir}/Taijitan.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javax.persistence-2.2.0-release.jar=..\\..\\..\\ProjectII\\javax.persistence-2.2.0-release.jar
+file.reference.javax.repository-2.2.0-release.jar=..\\..\\..\\ProjectII\\javax.persistence-2.2.0-release.jar
 file.reference.jfoenix-9.0.8.jar=C:\\Users\\Jarne\\Downloads\\jfoenix-9.0.8.jar
 file.reference.jfoenix-9.0.8.jar-1=C:\\Users\\tijsm\\Downloads\\jfoenix-9.0.8.jar
 file.reference.jfoenix-9.0.8.jar-2=..\\..\\..\\ProjectII\\jfoenix-9.0.8.jar
@@ -48,14 +48,12 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jfoenix-9.0.8.jar-2}:\
     ${file.reference.mssql-jdbc-7.2.1.jre8.jar}:\
-    ${file.reference.javax.persistence-2.2.0-release.jar}:\
+    ${file.reference.javax.repository-2.2.0-release.jar}:\
     ${file.reference.sqljdbc42.jar-1}
     ${file.reference.jfoenix-9.0.8.jar}:\
     ${file.reference.jfoenix-9.0.8.jar-1}:\
     ${file.reference.sqljdbc42.jar}:\
     ${libs.eclipselink.classpath}
-=======
-    ${file.reference.jfoenix-9.0.8.jar}
     ${javac.classpath}
 javac.source=10
 javac.target=10
