--- a/Taijitan/nbproject/project.properties
+++ b/Taijitan/nbproject/project.properties
@@ -55,6 +55,8 @@ javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${libs.eclipselink.classpath}
     ${javac.classpath}
+javac.modulepath=
+javac.processormodulepath=
 javac.source=10
 javac.target=10
 javac.test.classpath=\
@@ -116,7 +118,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_10
+platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
