--- a/Taijitan/nbproject/project.properties
+++ b/Taijitan/nbproject/project.properties
@@ -4,8 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Taijitan
-application.vendor=Jarne
+application.title=TaijitanNB
+application.vendor=robbe
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -30,33 +30,36 @@ debug.test.modulepath=\
     ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Taijitan.jar
+dist.jar=${dist.dir}/TaijitanNB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javax.repository-2.2.0-release.jar=..\\..\\..\\ProjectII\\javax.persistence-2.2.0-release.jar
-file.reference.jfoenix-9.0.8.jar=C:\\Users\\Jarne\\Downloads\\jfoenix-9.0.8.jar
-file.reference.jfoenix-9.0.8.jar-1=C:\\Users\\tijsm\\Downloads\\jfoenix-9.0.8.jar
-file.reference.jfoenix-9.0.8.jar-2=..\\..\\..\\ProjectII\\jfoenix-9.0.8.jar
-file.reference.mssql-jdbc-7.2.1.jre8.jar=..\\..\\..\\ProjectII\\sqljdbc_7.2\\enu\\mssql-jdbc-7.2.1.jre8.jar
-file.reference.sqljdbc42.jar=D:\\programs\\SQLServerDriver\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
-file.reference.sqljdbc42.jar-1=..\\..\\..\\ProjectII\\sqljdbc42.jar
+file.reference.derbyclient-10.14.2.0.jar=C:\\Jars\\derbyclient-10.14.2.0.jar
+file.reference.eclipselink.jar=C:\\Jars\\eclipselink.jar
+file.reference.javax.annotation_1.2.0.v201602091430.jar=C:\\Jars\\javax.annotation_1.2.0.v201602091430.jar
+file.reference.javax.persistence.jar=C:\\Jars\\javax.persistence.jar
+file.reference.jfoenix-9.0.8.jar=C:\\Jars\\jfoenix-9.0.8.jar
+file.reference.mysql-connector-java-8.0.15.jar=C:\\Jars\\mysql-connector-java-8.0.15.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jfoenix-9.0.8.jar-2}:\
-    ${file.reference.mssql-jdbc-7.2.1.jre8.jar}:\
-    ${file.reference.javax.repository-2.2.0-release.jar}:\
-    ${file.reference.sqljdbc42.jar-1}
+    ${file.reference.derbyclient-10.14.2.0.jar}:\
+    ${file.reference.eclipselink.jar}:\
+    ${file.reference.javax.annotation_1.2.0.v201602091430.jar}:\
+    ${file.reference.javax.persistence.jar}:\
     ${file.reference.jfoenix-9.0.8.jar}:\
-    ${file.reference.jfoenix-9.0.8.jar-1}:\
-    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${libs.eclipselink.classpath}
-    ${javac.classpath}
+# Space-separated list of extra javac options
+javac.compilerargs=
+javac.deprecation=false
 javac.modulepath=
 javac.processormodulepath=
+javac.processorpath=\
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=10
 javac.target=10
 javac.test.classpath=\
@@ -69,7 +72,6 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
-javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -105,8 +107,6 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
-jlink.launcher=false
-jlink.launcher.name=Taijitan
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -117,7 +117,6 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
