--- a/Taijitan/nbproject/project.properties
+++ b/Taijitan/nbproject/project.properties
@@ -34,12 +34,13 @@ dist.jar=${dist.dir}/Taijitan.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.derbyclient-10.14.2.0.jar=C:\\Jars\\derbyclient-10.14.2.0.jar
-file.reference.eclipselink.jar=C:\\Jars\\eclipselink.jar
-file.reference.javax.annotation_1.2.0.v201602091430.jar=C:\\Jars\\javax.annotation_1.2.0.v201602091430.jar
-file.reference.javax.persistence.jar=C:\\Jars\\javax.persistence.jar
-file.reference.jfoenix-9.0.8.jar=C:\\Jars\\jfoenix-9.0.8.jar
-file.reference.mysql-connector-java-8.0.15.jar=C:\\Jars\\mysql-connector-java-8.0.15.jar
+file.reference.derbyclient-10.14.2.0.jar=C:\\jars\\derbyclient-10.14.2.0.jar
+file.reference.eclipselink.jar=C:\\jars\\eclipselink.jar
+file.reference.javax.annotation_1.2.0.v201602091430.jar=C:\\jars\\javax.annotation_1.2.0.v201602091430.jar
+file.reference.javax.persistence.jar=C:\\jars\\javax.persistence.jar
+file.reference.jfoenix-9.0.8.jar=C:\\jars\\jfoenix-9.0.8.jar
+file.reference.mssql-jdbc-7.2.1.jre8.jar=C:\\jars\\mssql-jdbc-7.2.1.jre8.jar
+file.reference.mysql-connector-java-8.0.15.jar=C:\\jars\\mysql-connector-java-8.0.15.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -51,7 +52,15 @@ javac.classpath=\
     ${file.reference.javax.persistence.jar}:\
     ${file.reference.jfoenix-9.0.8.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${javafx.classpath.extension}:\
+    ${file.reference.derbyclient-10.14.2.0.jar}:\
+    ${file.reference.eclipselink.jar}:\
+    ${file.reference.javax.annotation_1.2.0.v201602091430.jar}:\
+    ${file.reference.javax.persistence.jar}:\
+    ${file.reference.jfoenix-9.0.8.jar}:\
+    ${file.reference.mssql-jdbc-7.2.1.jre8.jar}:\
+    ${file.reference.mysql-connector-java-8.0.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -82,6 +91,10 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
+javafx.classpath.extension=\
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/deploy.jar:\
+    ${java.home}/lib/plugin.jar
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
