--- a/Taijitan/nbproject/project.properties
+++ b/Taijitan/nbproject/project.properties
@@ -34,13 +34,30 @@ dist.jar=${dist.dir}/Taijitan.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.3.jar=C:\\jars\\commons-collections4-4.3.jar
+file.reference.commons-compress-1.18.jar=C:\\jars\\commons-compress-1.18.jar
 file.reference.derbyclient-10.14.2.0.jar=C:\\jars\\derbyclient-10.14.2.0.jar
+file.reference.dom4j-1.6.1.jar=C:\\jars\\dom4j-1.6.1.jar
 file.reference.eclipselink.jar=C:\\jars\\eclipselink.jar
+file.reference.fontbox-2.0.15.jar=C:\\jars\\fontbox-2.0.15.jar
 file.reference.javax.annotation_1.2.0.v201602091430.jar=C:\\jars\\javax.annotation_1.2.0.v201602091430.jar
 file.reference.javax.persistence.jar=C:\\jars\\javax.persistence.jar
+file.reference.jfilechooser-bookmarks-0.1.0.jar=C:\\jars\\jfilechooser-bookmarks-0.1.0.jar
 file.reference.jfoenix-9.0.8.jar=C:\\jars\\jfoenix-9.0.8.jar
+file.reference.junit-4.13-beta-3.jar=C:\\jars\\junit-4.13-beta-3.jar
 file.reference.mssql-jdbc-7.2.1.jre8.jar=C:\\jars\\mssql-jdbc-7.2.1.jre8.jar
 file.reference.mysql-connector-java-8.0.15.jar=C:\\jars\\mysql-connector-java-8.0.15.jar
+file.reference.pdfbox-app-2.0.15.jar=C:\\jars\\pdfbox-app-2.0.15.jar
+file.reference.pdfbox-tools-2.0.15.jar=C:\\jars\\pdfbox-tools-2.0.15.jar
+file.reference.poi-4.1.0.jar=C:\\jars\\poi-4.1.0.jar
+file.reference.poi-examples-4.1.0.jar=C:\\jars\\poi-examples-4.1.0.jar
+file.reference.poi-excelant-4.1.0.jar=C:\\jars\\poi-excelant-4.1.0.jar
+file.reference.poi-ooxml-4.1.0.jar=C:\\jars\\poi-ooxml-4.1.0.jar
+file.reference.poi-ooxml-schemas-4.1.0.jar=C:\\jars\\poi-ooxml-schemas-4.1.0.jar
+file.reference.poi-scratchpad-4.1.0.jar=C:\\jars\\poi-scratchpad-4.1.0.jar
+file.reference.preflight-app-2.0.15.jar=C:\\jars\\preflight-app-2.0.15.jar
+file.reference.xmlbeans-3.1.0.jar=C:\\jars\\xmlbeans-3.1.0.jar
+file.reference.xmpbox-2.0.15.jar=C:\\jars\\xmpbox-2.0.15.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -53,17 +70,28 @@ javac.classpath=\
     ${file.reference.jfoenix-9.0.8.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${javafx.classpath.extension}:\
-    ${file.reference.derbyclient-10.14.2.0.jar}:\
-    ${file.reference.eclipselink.jar}:\
-    ${file.reference.javax.annotation_1.2.0.v201602091430.jar}:\
-    ${file.reference.javax.persistence.jar}:\
-    ${file.reference.jfoenix-9.0.8.jar}:\
     ${file.reference.mssql-jdbc-7.2.1.jre8.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.commons-collections4-4.3.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.fontbox-2.0.15.jar}:\
+    ${file.reference.jfilechooser-bookmarks-0.1.0.jar}:\
+    ${file.reference.pdfbox-app-2.0.15.jar}:\
+    ${file.reference.pdfbox-tools-2.0.15.jar}:\
+    ${file.reference.poi-4.1.0.jar}:\
+    ${file.reference.poi-examples-4.1.0.jar}:\
+    ${file.reference.poi-excelant-4.1.0.jar}:\
+    ${file.reference.poi-ooxml-4.1.0.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.1.0.jar}:\
+    ${file.reference.poi-scratchpad-4.1.0.jar}:\
+    ${file.reference.preflight-app-2.0.15.jar}:\
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.xmpbox-2.0.15.jar}:\
+    ${file.reference.junit-4.13-beta-3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
@@ -81,6 +109,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -91,10 +120,6 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
-javafx.classpath.extension=\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
@@ -120,6 +145,8 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+jlink.launcher=false
+jlink.launcher.name=Taijitan
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -130,9 +157,9 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+mkdist.disabled=false
+platform.active=JDK_10
 run.classpath=\
-    ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
 run.modulepath=\
