Removed button in overview for coursematerial

--- a/Taijitan/nbproject/project.properties
+++ b/Taijitan/nbproject/project.properties
@@ -1,174 +1,121 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Taijitan
-application.vendor=robbe
-build.classes.dir=${build.dir}/classes
+#Thu May 16 21:59:00 CEST 2019
+javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
+javafx.enable.concurrent.external.runs=false
+javafx.binarycss=false
+file.reference.xmlbeans-3.1.0.jar=C\:\\jars\\xmlbeans-3.1.0.jar
+javadoc.author=false
 build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
 compile.on.save=true
-compile.on.save.unsupported.javafx=true
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/Taijitan.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
-excludes=
-file.reference.commons-collections4-4.3.jar=C:\\jars\\commons-collections4-4.3.jar
-file.reference.commons-compress-1.18.jar=C:\\jars\\commons-compress-1.18.jar
-file.reference.derbyclient-10.14.2.0.jar=C:\\jars\\derbyclient-10.14.2.0.jar
-file.reference.dom4j-1.6.1.jar=C:\\jars\\dom4j-1.6.1.jar
-file.reference.eclipselink.jar=C:\\jars\\eclipselink.jar
-file.reference.fontbox-2.0.15.jar=C:\\jars\\fontbox-2.0.15.jar
-file.reference.javax.annotation_1.2.0.v201602091430.jar=C:\\jars\\javax.annotation_1.2.0.v201602091430.jar
-file.reference.javax.persistence.jar=C:\\jars\\javax.persistence.jar
-file.reference.jfilechooser-bookmarks-0.1.0.jar=C:\\jars\\jfilechooser-bookmarks-0.1.0.jar
-file.reference.jfoenix-9.0.8.jar=C:\\jars\\jfoenix-9.0.8.jar
-file.reference.junit-4.13-beta-3.jar=C:\\jars\\junit-4.13-beta-3.jar
-file.reference.mssql-jdbc-7.2.1.jre8.jar=C:\\jars\\mssql-jdbc-7.2.1.jre8.jar
-file.reference.mysql-connector-java-8.0.15.jar=C:\\jars\\mysql-connector-java-8.0.15.jar
-file.reference.pdfbox-app-2.0.15.jar=C:\\jars\\pdfbox-app-2.0.15.jar
-file.reference.pdfbox-tools-2.0.15.jar=C:\\jars\\pdfbox-tools-2.0.15.jar
-file.reference.poi-4.1.0.jar=C:\\jars\\poi-4.1.0.jar
-file.reference.poi-examples-4.1.0.jar=C:\\jars\\poi-examples-4.1.0.jar
-file.reference.poi-excelant-4.1.0.jar=C:\\jars\\poi-excelant-4.1.0.jar
-file.reference.poi-ooxml-4.1.0.jar=C:\\jars\\poi-ooxml-4.1.0.jar
-file.reference.poi-ooxml-schemas-4.1.0.jar=C:\\jars\\poi-ooxml-schemas-4.1.0.jar
-file.reference.poi-scratchpad-4.1.0.jar=C:\\jars\\poi-scratchpad-4.1.0.jar
-file.reference.preflight-app-2.0.15.jar=C:\\jars\\preflight-app-2.0.15.jar
-file.reference.xmlbeans-3.1.0.jar=C:\\jars\\xmlbeans-3.1.0.jar
-file.reference.xmpbox-2.0.15.jar=C:\\jars\\xmpbox-2.0.15.jar
-includes=**
-# Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
-jar.archive.disabled=true
-jar.compress=false
-javac.classpath=\
-    ${file.reference.derbyclient-10.14.2.0.jar}:\
-    ${file.reference.eclipselink.jar}:\
-    ${file.reference.javax.annotation_1.2.0.v201602091430.jar}:\
-    ${file.reference.javax.persistence.jar}:\
-    ${file.reference.jfoenix-9.0.8.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}:\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.mssql-jdbc-7.2.1.jre8.jar}:\
-    ${file.reference.commons-collections4-4.3.jar}:\
-    ${file.reference.commons-compress-1.18.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.fontbox-2.0.15.jar}:\
-    ${file.reference.jfilechooser-bookmarks-0.1.0.jar}:\
-    ${file.reference.pdfbox-app-2.0.15.jar}:\
-    ${file.reference.pdfbox-tools-2.0.15.jar}:\
-    ${file.reference.poi-4.1.0.jar}:\
-    ${file.reference.poi-examples-4.1.0.jar}:\
-    ${file.reference.poi-excelant-4.1.0.jar}:\
-    ${file.reference.poi-ooxml-4.1.0.jar}:\
-    ${file.reference.poi-ooxml-schemas-4.1.0.jar}:\
-    ${file.reference.poi-scratchpad-4.1.0.jar}:\
-    ${file.reference.preflight-app-2.0.15.jar}:\
-    ${file.reference.xmlbeans-3.1.0.jar}:\
-    ${file.reference.xmpbox-2.0.15.jar}:\
-    ${file.reference.junit-4.13-beta-3.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.external.vm=false
-javac.modulepath=
-javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
-javac.source=10
 javac.target=10
+build.generated.dir=${build.dir}/generated
+debug.test.modulepath=${run.test.modulepath}
+run.classpath=${javac.classpath}\:${build.classes.dir}
+file.reference.javax.annotation_1.2.0.v201602091430.jar=C\:\\jars\\javax.annotation_1.2.0.v201602091430.jar
+javafx.deploy.embedJNLP=true
+run.test.modulepath=${javac.test.modulepath}
+debug.test.classpath=${run.test.classpath}
+javac.processormodulepath=
+build.dir=build
+file.reference.fontbox-2.0.15.jar=C\:\\jars\\fontbox-2.0.15.jar
+javac.deprecation=false
+file.reference.poi-examples-4.1.0.jar=C\:\\jars\\poi-examples-4.1.0.jar
+file.reference.poi-ooxml-4.1.0.jar=C\:\\jars\\poi-ooxml-4.1.0.jar
+file.reference.xmpbox-2.0.15.jar=C\:\\jars\\xmpbox-2.0.15.jar
+javafx.preloader.project.path=
+file.reference.javax.persistence.jar=C\:\\jars\\javax.persistence.jar
+file.reference.poi-scratchpad-4.1.0.jar=C\:\\jars\\poi-scratchpad-4.1.0.jar
+javadoc.html5=false
+test.src.dir=test
+junit.selected.version=4
+jar.archive.disabled=true
+javafx.disable.concurrent.runs=false
+file.reference.eclipselink.jar=C\:\\jars\\eclipselink.jar
+includes=**
+application.vendor=robbe
+mkdist.disabled=false
+jar.compress=false
+file.reference.preflight-app-2.0.15.jar=C\:\\jars\\preflight-app-2.0.15.jar
+annotation.processing.processors.list=
+javac.external.vm=false
+javadoc.version=false
+file.reference.commons-collections4-4.3.jar=C\:\\jars\\commons-collections4-4.3.jar
+build.classes.dir=${build.dir}/classes
+dist.dir=dist
+file.reference.pdfbox-tools-2.0.15.jar=C\:\\jars\\pdfbox-tools-2.0.15.jar
+file.reference.jfoenix-9.0.8.jar=C\:\\jars\\jfoenix-9.0.8.jar
+manifest.file=manifest.mf
+javafx.deploy.allowoffline=true
+file.reference.jfilechooser-bookmarks-0.1.0.jar=C\:\\jars\\jfilechooser-bookmarks-0.1.0.jar
+javafx.deploy.includeDT=true
+javac.source=10
+manifest.custom.permissions=
+javac.test.processorpath=${javac.test.classpath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+javafx.preloader.type=none
+javafx.preloader.jar.path=
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.notree=false
+dist.jar=${dist.dir}/Taijitan.jar
+run.modulepath=${javac.modulepath}
+javafx.preloader.jar.filename=
+file.reference.mysql-connector-java-8.0.15.jar=C\:\\jars\\mysql-connector-java-8.0.15.jar
+platform.active=JDK_10
+jlink.launcher=false
+file.reference.poi-excelant-4.1.0.jar=C\:\\jars\\poi-excelant-4.1.0.jar
+annotation.processing.enabled=true
+javafx.application.implementation.version=1.0
+debug.modulepath=${run.modulepath}
+main.class=com.javafx.main.Main
+dist.javadoc.dir=${dist.dir}/javadoc
+javadoc.additionalparam=
+javac.classpath=${file.reference.derbyclient-10.14.2.0.jar}\:${file.reference.eclipselink.jar}\:${file.reference.javax.annotation_1.2.0.v201602091430.jar}\:${file.reference.javax.persistence.jar}\:${file.reference.jfoenix-9.0.8.jar}\:${file.reference.mysql-connector-java-8.0.15.jar}\:${libs.eclipselink.classpath}\:${file.reference.mssql-jdbc-7.2.1.jre8.jar}\:${file.reference.commons-collections4-4.3.jar}\:${file.reference.commons-compress-1.18.jar}\:${file.reference.dom4j-1.6.1.jar}\:${file.reference.fontbox-2.0.15.jar}\:${file.reference.jfilechooser-bookmarks-0.1.0.jar}\:${file.reference.pdfbox-app-2.0.15.jar}\:${file.reference.pdfbox-tools-2.0.15.jar}\:${file.reference.poi-4.1.0.jar}\:${file.reference.poi-examples-4.1.0.jar}\:${file.reference.poi-excelant-4.1.0.jar}\:${file.reference.poi-ooxml-4.1.0.jar}\:${file.reference.poi-ooxml-schemas-4.1.0.jar}\:${file.reference.poi-scratchpad-4.1.0.jar}\:${file.reference.preflight-app-2.0.15.jar}\:${file.reference.xmlbeans-3.1.0.jar}\:${file.reference.xmpbox-2.0.15.jar}\:${file.reference.junit-4.13-beta-3.jar}
+file.reference.derbyclient-10.14.2.0.jar=C\:\\jars\\derbyclient-10.14.2.0.jar
+compile.on.save.unsupported.javafx=true
+javadoc.noindex=false
+javafx.deploy.backgroundupdate=false
+manifest.custom.codebase=*
+javafx.run.width=800
+file.reference.junit-4.13-beta-3.jar=C\:\\jars\\junit-4.13-beta-3.jar
+annotation.processing.enabled.in.editor=false
+javafx.enabled=true
+javadoc.private=false
+javadoc.encoding=${source.encoding}
+build.test.classes.dir=${build.dir}/test/classes
+file.reference.commons-compress-1.18.jar=C\:\\jars\\commons-compress-1.18.jar
+javafx.preloader.class=
+javac.compilerargs=
+source.encoding=UTF-8
+javafx.fallback.class=com.javafx.main.NoJavaFXFallback
+meta.inf.dir=${src.dir}/META-INF
+javafx.rebase.libs=false
+annotation.processing.run.all.processors=true
+excludes=
+application.title=Taijitan
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory\=false
+javac.test.modulepath=${javac.modulepath}
+javac.modulepath=
+file.reference.mssql-jdbc-7.2.1.jre8.jar=C\:\\jars\\mssql-jdbc-7.2.1.jre8.jar
+file.reference.dom4j-1.6.1.jar=C\:\\jars\\dom4j-1.6.1.jar
+file.reference.pdfbox-app-2.0.15.jar=C\:\\jars\\pdfbox-app-2.0.15.jar
+javafx.preloader.enabled=false
+jlink.launcher.name=Taijitan
+javac.processorpath=${javac.classpath}\:${libs.eclipselinkmodelgen.classpath}
+build.test.results.dir=${build.dir}/test/results
+javafx.run.height=600
+javadoc.use=true
+endorsed.classpath=
+file.reference.poi-4.1.0.jar=C\:\\jars\\poi-4.1.0.jar
+javadoc.nonavbar=false
+file.reference.poi-ooxml-schemas-4.1.0.jar=C\:\\jars\\poi-ooxml-schemas-4.1.0.jar
+javadoc.windowtitle=
+javafx.main.class=taijitan.Taijitan
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.html5=false
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-javafx.application.implementation.version=1.0
-javafx.binarycss=false
-javafx.deploy.allowoffline=true
-# If true, application update mode is set to 'background', if false, update mode is set to 'eager'
-javafx.deploy.backgroundupdate=false
-javafx.deploy.embedJNLP=true
-javafx.deploy.includeDT=true
-# Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
-javafx.disable.concurrent.runs=false
-# Set true to enable multiple concurrent runs of the same WebStart or Run-in-Browser project
-javafx.enable.concurrent.external.runs=false
-# This is a JavaFX project
-javafx.enabled=true
-javafx.fallback.class=com.javafx.main.NoJavaFXFallback
-# Main class for JavaFX
-javafx.main.class=taijitan.Taijitan
-javafx.preloader.class=
-# This project does not use Preloader
-javafx.preloader.enabled=false
-javafx.preloader.jar.filename=
-javafx.preloader.jar.path=
-javafx.preloader.project.path=
-javafx.preloader.type=none
-# Set true for GlassFish only. Rebases manifest classpaths of JARs in lib dir. Not usable with signed JARs.
-javafx.rebase.libs=false
-javafx.run.height=600
-javafx.run.width=800
-jlink.launcher=false
-jlink.launcher.name=Taijitan
-# Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
-jnlp.enabled=false
-# Main class for Java launcher
-main.class=com.javafx.main.Main
-# For improved security specify narrower Codebase manifest attribute to prevent RIAs from being repurposed
-manifest.custom.codebase=*
-# Specify Permissions manifest attribute to override default (choices: sandbox, all-permissions)
-manifest.custom.permissions=
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
-platform.active=JDK_10
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
-source.encoding=UTF-8
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 src.dir=src
-test.src.dir=test
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+debug.classpath=${run.classpath}
+jnlp.enabled=false
